[project]
name = "netgrep"
version = "0.1.0"
description = "Dependencies to build the netgrep website"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mdx-truly-sane-lists>=1.3",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material[imaging]>=9.7.5",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-material",
    "mkdocs-exclude-search>=0.6.6",
]
